sass/style.sass
/*!
  Lovingly crafted by @simplCoding
  Copyright (c) 2015

@import base
@import additions

// Import mixins from custom bootstrap library
@import bootstrap/variables
@import compass/css3/animation

.hasLvlTransition
  +transition(transform 0.3s, opacity 0.3s)

.level-down
  +transform(scale(0.9))
  opacity: 0

// utility class
.level-normal
  +transform(scale(1))
  opacity: 1

.level-up
  +transform(scale(1.1))
  opacity: 0

// TODO: Fix font sizes on md, xl screen sizes
body
  overflow: hidden
  //noinspection CssUnknownTarget
  background: url(../images/background-mobile-with-quote.jpg) center center no-repeat
  background-size: cover
  @media screen and (min-width: 600px)
    //noinspection CssUnknownTarget
    background: url(../images/background-with-quote.jpg) center center no-repeat

ul
  +list-style(none)
  padding-left: 10px
  border-left: 1px solid #4d4c4c
  li
    line-height: 1.2
    font-size: 0.885em
    &:not(:last-child)
      padding-bottom: 10px

.introduction, .about
  ul
    margin-top: 8px

$card-breakpoint: 570px
.content, .overlay
  height: 100%
  overflow-y: scroll
  overflow-x: hidden
  -webkit-overflow-scrolling: touch
  .card
    +center-block-inline
    background-color: white
    max-width: $card-breakpoint
    &:not(:last-child)
      margin-bottom: 10px
    @media screen and (min-width: 740px)
      width: 80%
      max-width: 1000px

.overlay
  // Absolute container
  height: 100vh
  width: 100vw
  top: 0
  position: absolute

header
  position: relative
  margin-top: 75px
  .text
    margin: 12px 0 12px
    &.first
      font-size: 1.875em
      line-height: 1.2
      margin: 30px 0 10px
      @media screen and (min-width: 1100px)
        font-size: 2.3em
  @media screen and (min-width: 700px)
    margin-top: 100px

header .padding-container
  padding: 10px
  @media screen and (min-width: $card-breakpoint)
    padding: 20px
  @media screen and (min-width: 840px)
    padding: 40px

.introduction, .about
  .padding-container
    padding: 15px
    @media screen and (min-width: $card-breakpoint)
      padding: 30px
    @media screen and (min-width: 840px)
      padding: 50px

.about .padding-container
  @media screen and (min-width: $card-breakpoint)
    padding-top: 20px
  @media screen and (min-width: 840px)
    padding-top: 40px

.introduction, .about
  .text.first
    font-size: 1.3em
    margin-bottom: 16px
  @media screen and (min-width: 1100px)
    font-size: 1.1em

.profile-container
  position: relative
  width: 125px
  max-width: 190px
  float: right
  margin-right: 10%
  margin-top: -72px
  @media screen and (min-width: $card-breakpoint)
    margin-right: 5%
  @media screen and (min-width: 700px)
    margin-top: -12%
    margin-right: -65px
    margin-bottom: 10px
    width: 24%
  @media screen and (min-width: 1000px)
    margin-right: -90px
  @media screen and (min-width: 1230px)
    margin-right: -110px

.profile-image
  +img-circle-p
  width: 100%

.logo
  position: absolute
  height: 65%
  bottom: -15%
  right: -28px
  pointer-events: none

.about-toggle
  +transition(opacity 0.3s)
  +position(0, 0)
  // Attr offset on parent element causes issues with the dimensions if omitted
  width: 100%
  position: absolute
  opacity: 0
  cursor: pointer
  .contact
    +transition(transform 0.2s)
    +position(0, 0, 0, 0)
    pointer-events: none
    position: absolute
    max-height: 35px
    height: 20%
    width: auto
    margin: auto
    fill: white
    opacity: 0.8
  &.highlight, &:hover
    opacity: 1
    .contact
      +transform(scale(1.1))
  &.highlight .contact.bounce
    +animation(bounce 1s ease-in-out 0.2s 2)
  &:active .contact
    +transform(scale(0.8))

.contact
  +transition(transform 0.3s)
  cursor: pointer
  .contact-info
    padding: 20px
    .phone
      font-size: 0.9em
    .phone, .email
      display: inline-block
      svg
        width: 70%
      &:not(:last-child)
        margin-right: 20px
    @media screen and (min-width: 840px)
      padding-left: 40px
      padding-right: 40px
  .about-me
    display: inline-block
    padding-top: 3px
    margin-top: 20px
    font-size: 1.05em
    color: #888888
    @media screen and (min-width: 740px)
      float: right
      margin-top: 0
  &:hover
    +transform(scale(1.03))

.introduction .flex-element:first-child
  margin-right: 35px

.about
  margin-top: 30px
  margin-bottom: 30px

footer
  +white-correction(1.3, true)
  +display-flex
  +align-items(center)
  +justify-content(space-between)
  padding: 10px
  @media screen and (min-width: $card-breakpoint)
    padding-left: 20px

.simplCoding, .hostinger
  margin: 10px 0 12px 0
  height: 36px
  @media screen and (max-width: $card-breakpoint)
    height: 29px

.hostinger
  margin-right: 15px

.divider
  height: 1px
  width: 10px

.hostinger
  margin-left: 10px
  @media screen and (max-width: 880px)
    display: none

.copyright
  color: rgba(255, 255, 255, 0.76)
  font-size: 0.9em
  @media screen and (min-width: $card-breakpoint)
    font-size: 1.1em

.about .close
  +transition(transform 0.2s)
  cursor: pointer
  float: right
  padding: 5px
  margin: 10px
  md-icon
    width: 20px
    height: 20px
  &:hover
    +transform(scale(1.3))
  &:active
    +transform(scale(0.8))
  @media screen and (min-width: 900px)
    margin: 30px 30px 5px 10px

+keyframes(bounce)
  0%
    +transform(scale(1))
  13.33%
    +transform(scale(1.6))
  26.63%
    +transform(scale(1.3))
  39.93%
    +transform(scale(1.5))
  53.23%
    +transform(scale(1.4))
  66.53%
    +transform(scale(1.5))
  90%
    +transform(scale(1.5))
  100%
    +transform(scale(1))

